Update project: Add new files and modify existing ones

--- a/llmtriage/index.html
+++ b/llmtriage/index.html
@@ -168,6 +168,19 @@
                     Your browser does not support the video tag.
                 </video>
             </p>
+            <p>
+                <pre style="background-color: #f4f4f4; padding: 10px; border-radius: 5px; overflow-x: auto;">
+Example output:
+{
+    "status": "success",
+    "message": "The diagnostic process completed successfully.",
+    "details": {
+        "tool_used": "check_service_status",
+        "result": "Service is running with 3 instances."
+    }
+}
+                </pre>
+            </p>
         </div>
     </div>
 
