Update project: Add new files and modify existing ones

--- a/llmtriage/index.html
+++ b/llmtriage/index.html
@@ -155,31 +155,12 @@
 
         <!-- Slide 6 (formerly Slide 13) -->
         <div class="step" data-x="3840" data-y="0" data-scale="1">
-            <h2>Conclusion: A Balanced and Pragmatic Approach</h2>
-            <ul>
-                <li>The human-in-the-loop LLM triage solution offers a balanced and pragmatic approach.</li>
-                <li>It effectively leverages the power of LLMs while ensuring crucial human oversight and control at key decision points.</li>
-                <li>This collaborative approach combines the efficiency and analytical capabilities of LLMs with the critical thinking, domain expertise, and nuanced understanding of human engineers.</li>
-                <li>The result is a promising path towards a more efficient, accurate, and reliable software issue triage process, ultimately improving software quality and development productivity.</li>
-            </ul>
+            <h2>Demo</h2>
             <p>
                 <video controls style="max-width: 80%; margin-top: 20px;">
-                    <source src="assets/sample_interactions.mp4" type="video/mp4">
+                    <source src="assets/2025-03-31 18-09-39.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
-            </p>
-            <p>
-                <pre style="background-color: #f4f4f4; padding: 10px; border-radius: 5px; overflow-x: auto;">
-Example output:
-{
-    "status": "success",
-    "message": "The diagnostic process completed successfully.",
-    "details": {
-        "tool_used": "check_service_status",
-        "result": "Service is running with 3 instances."
-    }
-}
-                </pre>
             </p>
         </div>
     </div>
