Update project: Add new files and modify existing ones

--- a/llmtriage/index.html
+++ b/llmtriage/index.html
@@ -153,10 +153,11 @@
             </div>
         </div>
 
-        <!-- Slide 6 (formerly Slide 13) -->
+        <!-- Slide 3 -->
         <div class="step" data-x="3840" data-y="0" data-scale="1">
             <h2>Demo</h2>
             <p>
+                Source code: <a href="https://github.com/arindamr/llmtriage">https://github.com/arindamr/llmtriage</a>
                 <video controls style="max-width: 80%; margin-top: 20px;">
                     <source src="assets/2025-03-31 18-09-39.mp4" type="video/mp4">
                     Your browser does not support the video tag.
